formatting projects page

--- a/about.html
+++ b/about.html
@@ -58,10 +58,12 @@
 
         <!--Side bar instilled for acadamic side-->
                   <aside id="sideBar">
-                    <h3>Acadamics</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    <div class="dark">
+                      <h3>Acadamics</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                       labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                       nisi ut aliquip ex ea commodo</p>
+                    </div>
                   </aside>
       </div>
     </section>
